# Elysium

./: .gitignore  cookies.txt  oauth.json  ytmusic_downloader.py
music_player/: AGENTS.md  Cargo.toml  README.md  liked_songs.txt  playlists.txt  shortcuts.txt
music_player/src/: lang.rs  main.rs  meta.rs  player.rs  scanner.rs
music_player/src/app/: mod.rs
music_player/src/app/ui/: bottom_bar.rs  central.rs  home_page.rs  lyrics.rs  mod.rs  now_playing.rs  playlist_page.rs
